# skyVacancyDB

./: .gitignore  README.md  pyproject.toml
data/: create_db.sql
src/: api.py  dbmanager.py  employer.py  env.py  main.py  req_params.py  user_interface.py  vacancy.py
tests/: test_api.py  test_req_params.py  test_vacancy.py
